--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 		<section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
 			<div class="content">
 				<h1>I am&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;<b>Ziyi Lu</b></h1>
-				<p class="major">A Dec 2021 graduate from <b>UC Berkeley</b>,
+				<p class="major">A 2021 graduate from <b>UC Berkeley</b>,
 					</br>with a <b>Computer Science & Astrophysics</b> double BA.
-				</br>↳ Seeking a <b>Software Engineer</b> intern / full-time position.</p>
+				</br>↳ Seeking a <b>Software Engineer</b> intern / full-time position.
+				</br>
+				</br> I would like to use my software skills & team-oriented personality to continually optimise how people or customers do what they love.</p>
 				<ul class="actions stacked">
 					<li><a href="#skills" class="button big wide smooth-scroll-middle">Read on ↓</a></li>
 					<li><a href="https://github.com/lzy-106/lzy-106/blob/main/LU%20Ziyi%20Resume.pdf" class="button big wide smooth-scroll-middle">Resume ↗︎</a></li>
