--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 		<!-- WIP -->
 		<section class="wrapper style1 align-center">
 		    <div class="inner">
-		        <h2>Work in progress (like the learner I am)</h2>
+		        <h2><b>Work in progress</b>
+				</br>(&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;like the learner I am)</h2>
 		        <p>Pls check back&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;next week.</p>
 		    </div>
 
