--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				<h1>I am&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;<b>Ziyi Lu</b></h1>
 				<p class="major">A 2021 graduate from <b>UC Berkeley</b>,
 					</br>with a <b>Computer Science & Astrophysics</b> double BA.
-				</br>↳ Seeking a <b>Software Engineer</b> intern / full-time position.
+				</br>↳ Seeking a <b>Software Engineer</b> internship / full-time position.
 				</br>
-				</br> I would like to use my software skills & team-oriented personality to continually optimise how people or customers do what they love.</p>
+				</br> I would like to use my software skills & team-oriented personality to continually optimise how customers do what they love.</p>
 				<ul class="actions stacked">
 					<li><a href="#skills" class="button big wide smooth-scroll-middle">Read on ↓</a></li>
 					<li><a href="https://github.com/lzy-106/lzy-106/blob/main/LU%20Ziyi%20Resume.pdf" class="button big wide smooth-scroll-middle">Resume ↗︎</a></li>
