--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 					<section>
 						<span class="icon solid style2 major fa-code"></span>
 						<h3>Languages</h3>
-						<p>Python, Ruby, HAML & HTML, SQL, Go, Java, C, RISC-V assembly</p>
+						<p>Python, Ruby, HTML, Go, Java, C, RISC-V assembly</p>
 					</section>
 					<section>
 						<span class="icon solid style2 major fa-users"></span>
 						<h3>Methodologies</h3>
-						<p>Agile team development, Object-Oriented Programming (OOP), Test-Driven Development (RSpec & Cucumber), Continuous Integration (Travis)</p>
+						<p>Agile team development, Object-Oriented Programming (OOP), Software-as-a-Service (SaaS), REST (REpresentational State Transfer), Test-Driven Development (RSpec & Cucumber), Continuous Integration (Travis)</p>
 					</section>
 				</div>
 			</div>
