--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					</br>with a <b>Computer Science & Astrophysics</b> double BA.
 				</br>↳ Seeking a <b>Software Engineer</b> internship / full-time position.
 				</br>
-				</br> I would like to use my software skills & team-oriented personality to continually optimise how customers do what they love.</p>
+				</br> I would like to use my team-friendly software skills & constant learning to continually optimise how people do what they love.</p>
 				<ul class="actions stacked">
 					<li><a href="#skills" class="button big wide smooth-scroll-middle">Read on ↓</a></li>
 					<li><a href="https://github.com/lzy-106/lzy-106/blob/main/LU%20Ziyi%20Resume.pdf" class="button big wide smooth-scroll-middle">Resume ↗︎</a></li>
