--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 			<div class="inner">
 				<h2>I have been learning&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Skills</b></h2>
 				<p>I have got used to <b>learning new tools</b> every semester to meet specific demands at different classes. Some of those are not even computer-related.
-					</br>Python is for short projects in algorithm classes, and big ones depending on scientific libraries in astronomy ones, some of which are web enabled. Ruby on Rails is for simple web applications, whose Convention over
-					Configuration saves set-up time. Furthermore, Go is for the professor infatuated with its concurrency and volun-telling students to constantly learn new languages.
+					</br><i>Python</i> is for short projects in algorithm classes, and big ones depending on scientific libraries in astronomy ones, some of which are web enabled. 
+						<i>Ruby on Rails</i> is for simple web applications, whose Convention over Configuration saves set-up time. 
+						Furthermore, <i>Go</i> is for the professor infatuated with its concurrency and volun-telling students to constantly learn new languages.
 					</br>↳ The challenges at school may not parallel industrial ones, but they assure that I am willing to <b>ever evolve</b>.</p>
 				<div class="items style1 medium">
 					<section>
