--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
 			<div class="content">
 				<h1>I am&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;<b>Ziyi Lu</b></h1>
-				<p class="major">A 2021 graduate from <b>UC Berkeley</b>,
+				<p class="major">Student at <b>UC Berkeley</b>, graduating in Dec 2021
 					</br>with a <b>Computer Science & Astrophysics</b> double BA.
 				</br>↳ Seeking a <b>Software Engineer</b> internship / full-time position.
 				</br>
