Prompt to check open-source projects

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 				<h1>I am&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;<b>Ziyi Lu</b></h1>
 				<p class="major">Student at <b>UC Berkeley</b>, graduating in Dec 2021
 					</br>with a <b>Computer Science & Astrophysics</b> double BA.
-				</br>↳ Seeking a <b>Software Engineer</b> internship / full-time position.
+				</br>↳ Seeking <b>Software Engineering</b> internship.
 				</br>
-				</br> I would like to use my team-friendly software skills & constant learning to continually optimise how people do what they love.</p>
+				</br> I would like to use my team-friendly software skills & constant learning to continually optimise how people do what they love.
+				</br> Pls check out my open-source experience in my resume!</p>
 				<ul class="actions stacked">
 					<li><a href="#skills" class="button big wide smooth-scroll-middle">Read on ↓</a></li>
 					<li><a href="https://github.com/lzy-106/lzy-106/blob/main/LU%20Ziyi%20Resume.pdf" class="button big wide smooth-scroll-middle">Resume ↗︎</a></li>
