Prompt to check links

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 		    <div class="inner">
 		        <h2><b>Work in progress</b>
 				</br>(&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;like the learner I am)</h2>
-		        <p>Pls check back&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;next week.</p>
+		        <p>Pls check back&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;next week,</p>
+			<p>and check the links below&nbsp;&nbsp;&nbsp;↓.</p>
 		    </div>
 
 		</section>
