--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 		<section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
 			<div class="content">
 				<h1>I am&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;<b>Ziyi Lu</b></h1>
-				<p class="major">Student at <b>UC Berkeley</b>, graduating in Dec 2021
+				<p class="major"><b>Amazon</b> SDE inter
+					</br>Student at <b>UC Berkeley</b>, graduating in Dec 2021
 					</br>with a <b>Computer Science & Astrophysics</b> double BA.
-				</br>↳ Seeking <b>Software Engineering</b> internship.
+				</br>↳ Seeking <b>Software Engineering</b> role.
 				</br>
-				</br> I would like to use my team-friendly software skills & constant learning to continually optimise how people do what they love.
+			</br> I would like to use my team-friendly software skills & constant learning to bring people together.
 				</br> Pls check out my open-source experience in my resume!</p>
 				<ul class="actions stacked">
 					<li><a href="#skills" class="button big wide smooth-scroll-middle">Read on ↓</a></li>
@@ -45,8 +46,8 @@
 			<div class="inner">
 				<h2>I have been learning&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Skills</b></h2>
 				<p>I have got used to <b>learning new tools</b> every semester to meet specific demands at different classes. Some of those are not even computer-related.
-					</br><i>Python</i> is for short projects in algorithm classes, and big ones depending on scientific libraries in astronomy ones, some of which are web enabled. 
-						<i>Ruby on Rails</i> is for simple web applications, whose Convention over Configuration saves set-up time. 
+					</br><i>Python</i> is for short projects in algorithm classes, and big ones depending on scientific libraries in astronomy ones, some of which are web enabled.
+						<i>Ruby on Rails</i> is for simple web applications, whose Convention over Configuration saves set-up time.
 						Furthermore, <i>Go</i> is for the professor infatuated with its concurrency and volun-telling students to constantly learn new languages.
 					</br>↳ The challenges at school may not parallel industrial ones, but they assure that I am willing to <b>ever evolve</b>.</p>
 				<div class="items style1 medium">
