--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Ziyi Lu ← Software Engineer</title>
+	<title>Ziyi Lu ← SDE.</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,19 +21,21 @@
 	<div id="wrapper" class="divided">
 
 		<!-- One -->
-		<section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
+		<section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right" id="top">
 			<div class="content">
-				<h1>I am&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;<b>Ziyi Lu</b></h1>
-				<p class="major"><b>Amazon</b> SDE inter
+				<!-- <span class="icon solid style2 fa-id-card"></span> -->
+				<h1>I am&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;<b>Ziyi Lu</b>.</h1>
+				<p class="major"><b>Amazon</b> SDE intern,
 					</br>Student at <b>UC Berkeley</b>, graduating in Dec 2021
 					</br>with a <b>Computer Science & Astrophysics</b> double BA.
 				</br>↳ Seeking <b>Software Engineering</b> role.
 				</br>
-			</br> I would like to use my team-friendly software skills & constant learning to bring people together.
-				</br> Pls check out my open-source experience in my resume!</p>
+			</br> Pls check out my <b>open-source</b> experience
+			</br> in my resume!</p>
 				<ul class="actions stacked">
-					<li><a href="#skills" class="button big wide smooth-scroll-middle">Read on ↓</a></li>
-					<li><a href="https://github.com/lzy-106/lzy-106/blob/main/LU%20Ziyi%20Resume.pdf" class="button big wide smooth-scroll-middle">Resume ↗︎</a></li>
+					<li><a href="https://github.com/lzy-106/lzy-106/blob/main/LU%20Ziyi%20Resume.pdf" class="button fit icon solid fa-file" >Resume ↗︎</a></li>
+					<li><a href="#footer" class="button fit icon solid fa-address-card smooth-scroll-middle">Contacts ↓</a></li>
+					<li><a href="#brand" class="button primary fit icon solid fa-book-reader smooth-scroll-middle">Read on ↓</a></li>
 				</ul>
 			</div>
 			<div class="image">
@@ -41,30 +43,124 @@
 			</div>
 		</section>
 
+		<!-- Brand -->
+		<section class="wrapper style1 align-center" id="brand">
+		    <div class="inner">
+				<span class="icon solid major fa-bullseye"></span>
+		        <h1>I would like to use my team-friendly software skills
+					& constant learning to bring people together.
+		    </div>
+
+		</section>
+
 		<!-- Six -->
 		<section class="wrapper style1 align-center" id="skills">
 			<div class="inner">
-				<h2>I have been learning&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Skills</b></h2>
-				<p>I have got used to <b>learning new tools</b> every semester to meet specific demands at different classes. Some of those are not even computer-related.
-					</br><i>Python</i> is for short projects in algorithm classes, and big ones depending on scientific libraries in astronomy ones, some of which are web enabled.
+				<span class="icon solid style2 major fa-tools"></span>
+				<h1>I have been learning&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Skills</b></h1>
+				<p>I have got used to <b>learning new tools</b> every semester to meet specific demands at different classes.
+					<!-- </br><i>Python</i> is for short projects in algorithm classes, and big ones depending on scientific libraries in astronomy ones, some of which are web enabled.
 						<i>Ruby on Rails</i> is for simple web applications, whose Convention over Configuration saves set-up time.
-						Furthermore, <i>Go</i> is for the professor infatuated with its concurrency and volun-telling students to constantly learn new languages.
+						Furthermore, <i>Go</i> is for the professor infatuated with its concurrency and volun-telling students to constantly learn new languages. -->
 					</br>↳ The challenges at school may not parallel industrial ones, but they assure that I am willing to <b>ever evolve</b>.</p>
 				<div class="items style1 medium">
 					<section>
-						<span class="icon solid style2 major fa-microchip"></span>
-						<h3>Technologies</h3>
-						<p>Ruby on Rails web framework, git, NumPy, MatPlotLib, Conda</p>
+						<span class="icon solid style2 major fa-code"></span>
+						<h2>Languages</h2>
+						<ol>
+							<li>Python</li>
+							<li>C</li>
+							<li>Ruby</li>
+							<li>Go</li>
+							<li>Java</li>
+						</ol>
 					</section>
 					<section>
-						<span class="icon solid style2 major fa-code"></span>
-						<h3>Languages</h3>
-						<p>Python, Ruby, HTML, Go, Java, C, RISC-V assembly</p>
+						<span class="icon solid style2 major fa-cube"></span>
+						<h2>Technologies</h2>
+						<ol>
+							<li>Ruby on Rails web framework</li>
+							<li>Flask back-end framework</li>
+							<li>git</li>
+							<li>Heroku cloud</li>
+							<li>Terminal</li>
+						</ol>
 					</section>
 					<section>
 						<span class="icon solid style2 major fa-users"></span>
-						<h3>Methodologies</h3>
-						<p>Agile team development, Object-Oriented Programming (OOP), Software-as-a-Service (SaaS), REST (REpresentational State Transfer), Test-Driven Development (RSpec & Cucumber), Continuous Integration (Travis)</p>
+						<h2>Methodologies</h2>
+						<ol>
+							<li>Agile team development</li>
+							<li>Object-oriented Programming (OOP)</li>
+							<li>Test-Driven Development (TDD)</li>
+							<li>Test Automation</li>
+							<li>RESTful APIs</li>
+						</ol>
+					</section>
+				</div>
+			</div>
+		</section>
+
+		<!-- Work -->
+		<section class="wrapper style1 align-center" id="work">
+			<div class="inner align-center">
+				<span class="icon solid style2 major fa-building"></span>
+				<h1>I have had &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Work Experience</b></h1>
+				<p>Seeking my 1st full-time.</p>
+				<div class="index align-center">
+					<section>
+						<header>
+							<span class="icon brands solid style2 major fa-amazon"></span>
+							<h2>Amazon</h2>
+						</header>
+						<div class="content align-left">
+							<h3>Software Development Engineer Intern</h3>
+							<h4>Incoming, Jun 2021 - Sept 2021</h4>
+						</div>
+					</section>
+					<section>
+						<header>
+							<span class="icon solid style2 major fa-university"></span>
+							<h2>UC Berkeley</h2>
+						</header>
+						<div class="content align-left">
+							<h3>Undergraduate Student Instructor (TA)</h3>
+							<h4>Incoming, Aug 2020 - Dec 2020</h4>
+							<ol>
+								<li>Taught Optical & Infrared Astronomy Lab to 20 junior & senior students for 8h / wk.</li>
+								<li>Gave tutorials on scientific computing tools & how to write clear, optimised code.</li>
+								<li>Held office hours, often answering questions about programming in Python.</li>
+							</ol>
+							<a href="https://github.com/lzy-106/Astro120Func" class="button fit icon solid fa-code" >My Sample Code for Students ↗︎</a>
+						</div>
+					</section>
+				</div>
+			</div>
+		</section>
+
+		<!-- Coursework -->
+		<section class="wrapper style1 align-center" id="coursework">
+			<div class="inner align-center">
+				<span class="icon solid style2 major fa-university"></span>
+				<h1>I have been taking&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Classes</b></h1>
+				<p>at <b>UC Berkeley</b> for a Computer Science BA degree.</p>
+				<div class="index align-center">
+					<section>
+						<header>
+							<h3>Select Coursework</h3>
+						</header>
+						<div class="content align-left">
+							<ol>
+								<li>Software Engineering</li>
+								<li>Computer Architecture</li>
+								<li>Artificial Intelligence</li>
+								<li>Algorithms</li>
+								<li>Computer Security</li>
+								<li>Machines Structures</li>
+								<li>Data Structures</li>
+							</ol>
+							etc.
+						</div>
 					</section>
 				</div>
 			</div>
@@ -73,8 +169,9 @@
 		<!-- WIP -->
 		<section class="wrapper style1 align-center">
 		    <div class="inner">
-		        <h2><b>Work in progress</b>
-				</br>(&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;like the learner I am)</h2>
+				<span class="icon solid style2 major fa-hard-hat"></span>
+		        <h1><b>Work in progress</b>
+				</br>(&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;like the learner I am)</h1>
 		        <p>Pls check back&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;next week,</p>
 			<p>and check the links below&nbsp;&nbsp;&nbsp;↓.</p>
 		    </div>
@@ -82,14 +179,18 @@
 		</section>
 
 		<!-- Footer -->
-		<footer class="wrapper style1 align-center">
+		<footer class="wrapper style1 align-center" id="footer">
 			<div class="inner">
+				<h1><b>Contact</b>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;me.</h1>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/luziyi" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/lzy-106/" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://bitbucket.org/lzy-1006/" class="icon brands style2 fa-bitbucket"><span class="label">BitBucket</span></a></li>
-					<li><a href="mailto:yiyi1998@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://github.com/lzy-106" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://bitbucket.org/lzy-1006" class="icon brands style2 fa-bitbucket"><span class="label">BitBucket</span></a></li>
+					<li><a href="mailto:lzy_1006@icloud.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
+				<a href="#top" class="button primary fit icon solid fa-arrow-up smooth-scroll-middle">Back to top</a>
+				</br>
 				<p>&copy; Ziyi Lu 2021. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 			</div>
 		</footer>
