--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 		<!-- One -->
 		<section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right" id="top">
 			<div class="content">
-				<!-- <span class="icon solid style2 fa-id-card"></span> -->
+				<!-- <span class="icon solid style1 fa-id-card"></span> -->
 				<h1>I am&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;<b>Ziyi Lu</b>.</h1>
-				<p class="major"><b>Amazon</b> SDE intern,
+				<p class="major">
+					<b>Amazon</b> SDE intern,
 					</br>Student at <b>UC Berkeley</b>, graduating in Dec 2021
 					</br>with a <b>Computer Science & Astrophysics</b> double BA.
 				</br>↳ Seeking <b>Software Engineering</b> role.
@@ -39,7 +40,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="images/portrait.jpg" alt="" />
+				<img src="images/portrait.jpg" alt="A UC Berkeley graduate named Ziyi Lu." />
 			</div>
 		</section>
 
@@ -47,8 +48,8 @@
 		<section class="wrapper style1 align-center" id="brand">
 		    <div class="inner">
 				<span class="icon solid major fa-bullseye"></span>
-		        <h1>I would like to use my team-friendly software skills
-					& constant learning to bring people together.
+		        <h1>I would like to use my <b>team-friendly</b> software skills
+					& <b>constant learning</b> to bring people together.
 		    </div>
 
 		</section>
@@ -114,7 +115,7 @@
 							<h2>Amazon</h2>
 						</header>
 						<div class="content align-left">
-							<h3>Software Development Engineer Intern</h3>
+							<h3><b>Software Development</b> Engineer Intern</h3>
 							<h4>Incoming, Jun 2021 - Sept 2021</h4>
 						</div>
 					</section>
@@ -124,14 +125,14 @@
 							<h2>UC Berkeley</h2>
 						</header>
 						<div class="content align-left">
-							<h3>Undergraduate Student Instructor (TA)</h3>
+							<h3>Undergraduate <b>Student Instructor</b> (TA)</h3>
 							<h4>Incoming, Aug 2020 - Dec 2020</h4>
 							<ol>
 								<li>Taught Optical & Infrared Astronomy Lab to 20 junior & senior students for 8h / wk.</li>
 								<li>Gave tutorials on scientific computing tools & how to write clear, optimised code.</li>
 								<li>Held office hours, often answering questions about programming in Python.</li>
 							</ol>
-							<a href="https://github.com/lzy-106/Astro120Func" class="button fit icon solid fa-code" >My Sample Code for Students ↗︎</a>
+							<a href="https://github.com/lzy-106/Astro120Func" class="button fit icon solid fa-code-branch" >My Sample Code for Students ↗︎</a>
 						</div>
 					</section>
 				</div>
@@ -163,6 +164,33 @@
 						</div>
 					</section>
 				</div>
+			</div>
+		</section>
+
+		<!-- Research -->
+		<section class="wrapper style1 align-center" id="research">
+			<div class="inner align-center">
+				<span class="icon solid style2 major fa-meteor"></span>
+				<h1>I have had &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Research Experience</b></h1>
+				<p>in <b>computational astrophysics</b>.</p>
+				<!-- <div class="index align-center"> -->
+
+				<!-- </div> -->
+			</div>
+		</section>
+		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+			<div class="content">
+				<h2>Cell-based Galactic H-alpha/beta Line
+					</br><b>Radiative Transfer Simulation</b></h2>
+					<ol>
+						<li>Cell-based Monte-Carlo numerical simulator of photon random walks in a galaxy.</li>
+						<li>Expanded legacy simulator in C, data processing & visualisation in Python.</li>
+						<li>Generated & processed ~15GB of photon data.</li>
+					</ol>
+					<a href="https://bitbucket.org/lzy-1006/h-art/src/master/" class="button fit icon solid fa-code-branch" >Code ↗︎</a>
+			</div>
+			<div class="image">
+				<img src="images/research.png" alt="Various photon maps for gases of different temperature phases in a simulated galaxy."/>
 			</div>
 		</section>
 
